k3s/sol/components/beszel/beszel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beszel
  namespace: monitoring
  annotations:
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: beszel
  template:
    metadata:
      labels:
        app: beszel
    spec:
      containers:
        - name: beszel
          image: henrygd/beszel:0.18.7
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8090
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            exec:
              command:
                - /beszel
                - health
                - --url
                - "http://localhost:8090"
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: beszel-data
              mountPath: /beszel_data
      volumes:
        - name: beszel-data
          persistentVolumeClaim:
            claimName: beszel-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: beszel
  ports:
    - port: 8090
      targetPort: 8090
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beszel-agent
  namespace: monitoring
  annotations:
spec:
  selector:
    matchLabels:
      app: beszel-agent
  template:
    metadata:
      labels:
        app: beszel-agent
    spec:
      hostNetwork: true
      containers:
        - name: beszel-agent
          image: henrygd/beszel-agent:0.18.7
          securityContext:
            runAsUser: $MY_UID
            runAsGroup: $MY_UID
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 45876
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
