k3s/sol/components/beszel/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`beszel.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: beszel
          port: 8090
  tls:
    secretName: beszel-prod-tls
